footer refinements/fixed spacing

--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // Color Variables
 $dark-grey: #212529;
 $mid-grey: #868e96;
+$lighter-grey: #ced4da;
 $light_grey: #e9ecef;
 $main-color: #fd7e14;
 $main-color--light:#ffa94d;
