--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -1,21 +1,32 @@
 @use "../abstracts/variables";
 @use "../abstracts/mixins";
 
-
 .footer {
   color: white;
   background: variables.$dark-grey;
 
+ 
+
   .footer-wrapper {
     display: flex;
-    padding: 2rem;
-    width: 90%;
+    padding: 0 2rem 1rem 2rem;
+    max-width: 65%;
     margin: auto;
     align-items: center;
-    min-height: 10vh;
+    min-height: 5vh;
     flex-wrap: wrap;
+    text-align: center;
+
+    @include mixins.respond(tablet) {
+      max-width: 30em;
+    }
+
+        @include mixins.respond(desktop) {
+      max-width: 35em;
+    }
+
   }
-  
+
   &__header {
     flex: 1 1 40rem;
   }
@@ -23,15 +34,23 @@
   &__nav {
     display: flex;
     list-style: none;
-    flex: 1 1 40rem;
+    flex: 1 1 30rem;
     justify-content: space-between;
     align-items: center;
-
+    
 
     i {
-      color: white;
+      color: variables.$lighter_grey;
       font-size: 2rem;
+      
+    }
+  }
+
+     h5 {
+      font-size: 1rem;
+      color: hsl(210, 16%, 70%);
+      margin: 1rem 0;
+     
     }
 
-  }
 }
